--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
     "name" : "node-red-contrib-wait-paths",
+    "version": "0.1.0",
+    "description": "Wait several branches to continue flow. Wait for incoming messages from diferent paths to generate only an output message with the declared variables under msg.path merged.",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mauriciom75/node-red-contrib-wait-paths.git"
+    },
+    "keywords": [
+        "node-red",
+        "node-red-contrib",
+        "contrib",
+        "function",
+        "development",
+        "combine","merge","join",
+        "parallel","wait"
+    ],
     "node-red" : {
         "nodes": {
             "wait-paths": "wait-paths.js"
         }
-    }
+    },
+    "author": "Mauricio Margot",
+    "license": "MIT",
+    "homepage": "https://github.com/mauriciom75/node-red-contrib-wait-paths"
 }
